--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </div>
             </li>
             <div class="divider"></div>
-            <li> <img class="activator " width="95% " height="250px " src="img_catalogo/sinpe.jpg"></li>
+            <li> <img class="activator " width="95% " height="250px " src="img_catalogo/SINPE MOVIL/SINPE.jpeg"></li>
 
             <li>
                 <div class="divider"></div>
