--- a/index.html
+++ b/index.html
@@ -118,8 +118,8 @@
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1A_f9C_r4nUKnCULVG4NH6hS4eH08Gvvz/view?usp=drive_link"
-                                    hidden><i class="material-icons left">cloud_done</i>Promoción Semanal</a></li><br>
+                                    href="https://drive.google.com/file/d/1bR46uo9PFuRybvl6R2mEFiPErrUfUjhE/view?usp=sharing"
+                                    ><i class="material-icons left">cloud_done</i>Promoción  de Verano</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1e5903msB0MH-wbuQNvgm1tKS8nRKl3DB/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
@@ -960,19 +960,19 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m6  l4 xl3 ">
+                <div class="col s12 m6  l4 xl3 " hidden>
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
                             <img class="activator " width="150px " height="150px " src="img_catalogo/bekaert.png">
                         </div>
-                        <div class="card-content ">
+                        <div class="card-content " hidden>
                             <span class="card-title activator grey-text text-darken-4 ">Bekaert</span>
                             <p><a>Alambre de púas.</a></p>
                         </div>
                         <div class="card-reveal ">Bekaert
                             <span class="card-title grey-text text-darken-4 "></span>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1XiR-aq23FzvFa_GwB9Y61-fjVxljo4E0/view?usp=sharing">
+                                    href="https://drive.google.com/file/d/1XiR-aq23FzvFa_GwB9Y61-fjVxljo4E0/view?usp=sharing" hidden>
                                     Catálogo Bekaert</a></li>
                         </div>
                     </div>
