--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                                     href="https://drive.google.com/file/d/1bR46uo9PFuRybvl6R2mEFiPErrUfUjhE/view?usp=sharing"
                                     ><i class="material-icons left">cloud_done</i>Promoción  de Verano</a></li><br>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1e5903msB0MH-wbuQNvgm1tKS8nRKl3DB/view?usp=sharing"><i
+                                    href="https://drive.google.com/file/d/1UmbFyomfjK0gsVvtM0jdtW8Ef5SOJ3sc/view?usp=drivesdk"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
                         </div>
                     </div>
