--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
 </head>
 <header>
     <!--barra titulo-->
-    <nav class="barra light-blue darken-4" > <img id="imgtitulo" class="activator " width="95px " height="75%" src="img_catalogo/cofersa.png"><a class="brand-logo center ">CATÁLOGO</a>
+    <nav class="barra light-blue darken-4"> <img id="imgtitulo" class="activator " width="95px " height="75%"
+            src="img_catalogo/cofersa.png"><a class="brand-logo center ">CATÁLOGO</a>
         <!-- Switch modo oscuro en barra de titulo -->
         <div class="switch">
             <label>
@@ -118,8 +119,11 @@
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1bR46uo9PFuRybvl6R2mEFiPErrUfUjhE/view?usp=sharing"
-                                    ><i class="material-icons left">cloud_done</i>Promoción  de Verano</a></li><br>
+                                href="https://drive.google.com/file/d/1YQDOyRnB27cFJBPwf0Qm0z7bxZo3WEMp/view?usp=sharing"><i
+                                    class="material-icons left">cloud_done</i>Black friday Grifería</a></li><br>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1bR46uo9PFuRybvl6R2mEFiPErrUfUjhE/view?usp=sharing"><i
+                                        class="material-icons left">cloud_done</i>Promoción de Verano</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1UmbFyomfjK0gsVvtM0jdtW8Ef5SOJ3sc/view?usp=drivesdk"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
@@ -155,7 +159,9 @@
                         </div>
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Producto Nuevo</span>
-
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1KH2ZDd7ctuPJOtAJAs-bBB8qRaDWm2yH/view?usp=sharing">Catálogo
+                                    lamparas, paneles, reflectores.</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1Uc3OO4hfd97WsGNUjD3h8zL9cJwDV_hc/view?usp=sharing">Cajas
                                     de Pino</a></li><br>
@@ -171,15 +177,29 @@
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1kxE1p9tTQ34oYJB0Te5uOk9h21LDe59p/view?usp=sharing">Encendedores</a>
                             </li><br>
-                            <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1jO6NSh_o8o1FKLE3elxuNFTu0ULdaraH/view?usp=sharing">Ratoneras</a>
-                            </li>
                         </div>
                     </div>
                 </div>
             </div>
             <!--row contiene todos los cards de la seccion productos-->
             <div class="row ">
+                <div class="col s12 m6  l4 xl3 ">
+                    <div class="card borde small z-depth-5 hoverable">
+                        <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " width="150px " height="150px " src="img_catalogo/bestway.png">
+                        </div>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Best Way</span>
+                            <p><a>Camping, flotadores, piscinas y accesorios.</a></p>
+                        </div>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1M5YrFsGK-1mHwZACdggWxht_jjK-oUfu/view?usp=sharing">
+                                    Catálogo Best Way</a></li>
+                        </div>
+                    </div>
+                </div>
                 <div class="col s12 m6  l4 xl3 ">
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
@@ -648,9 +668,9 @@
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/18mbteZAz3zps2IX9pWopFfIE7m1_Lqup/view?usp=sharing ">
                                     Catálogo Griferia</a></li><br>
-                                    <li><a class="flow-text"
-                                        href="https://drive.google.com/file/d/1U5W7FKFW5gpFFYR8Vwv0cT9NaC7P1XgK/view?usp=sharing">
-                                        Catálogo Griferia con precio</a></li><br> 
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1U5W7FKFW5gpFFYR8Vwv0cT9NaC7P1XgK/view?usp=sharing">
+                                    Catálogo Griferia con precio</a></li><br>
                         </div>
                     </div>
                 </div>
@@ -726,6 +746,9 @@
                         </div>
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                href="https://drive.google.com/file/d/1MQFYMfkZeQG72fn5504fOX0nmUXa1EKf/view?usp=sharing">
+                                Catálogo Control de plagas</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1_HLY28DLnsM8XEg2ZUpyLbw04fdv_jjl/view?usp=sharing">
                                     Catálogo Jardineria</a></li>
@@ -972,7 +995,8 @@
                         <div class="card-reveal ">Bekaert
                             <span class="card-title grey-text text-darken-4 "></span>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1XiR-aq23FzvFa_GwB9Y61-fjVxljo4E0/view?usp=sharing" hidden>
+                                    href="https://drive.google.com/file/d/1XiR-aq23FzvFa_GwB9Y61-fjVxljo4E0/view?usp=sharing"
+                                    hidden>
                                     Catálogo Bekaert</a></li>
                         </div>
                     </div>
@@ -1042,6 +1066,9 @@
                         </div>
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1KH2ZDd7ctuPJOtAJAs-bBB8qRaDWm2yH/view?usp=sharing">Catálogo
+                                    lamparas, paneles, reflectores.</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1KH2ZDd7ctuPJOtAJAs-bBB8qRaDWm2yH/view?usp=sharing">Bombillos
                                     Recidencial</a></li><br>
