--- a/index.html
+++ b/index.html
@@ -220,6 +220,23 @@
                 <div class="col s12 m6  l4 xl3 ">
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " width="150px " height="150px " src="">
+                        </div>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">Juguetes</span>
+                            <p><a>Rompecabezas, juegetes y más.</a></p>
+                        </div>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/11HZidvYEp6ZCZxGJNIB8qPxkNyFb3yXH/view?usp=sharing">
+                                    Catálogo juguetes</a></li>
+                        </div>
+                    </div>
+                </div>
+                <div class="col s12 m6  l4 xl3 ">
+                    <div class="card borde small z-depth-5 hoverable">
+                        <div class="card-image waves-effect waves-block waves-light ">
                             <img class="activator " width="150px " height="150px " src="img_catalogo/tgv.png">
                         </div>
                         <div class="card-content ">
