--- a/index.html
+++ b/index.html
@@ -118,14 +118,14 @@
                         </div>
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
-                            <li><a class="flow-text"
+                            <li><a class="flow-text" hidden
                                 href="https://drive.google.com/file/d/1YQDOyRnB27cFJBPwf0Qm0z7bxZo3WEMp/view?usp=sharing"><i
                                     class="material-icons left">cloud_done</i>Black friday Grifería</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1bR46uo9PFuRybvl6R2mEFiPErrUfUjhE/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción de Verano</a></li><br>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1UmbFyomfjK0gsVvtM0jdtW8Ef5SOJ3sc/view?usp=drivesdk"><i
+                                    href="https://drive.google.com/file/d/1rc5nd2jwxF48HGf8CxXCs9XchJOVazjR/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
                         </div>
                     </div>
@@ -220,7 +220,7 @@
                 <div class="col s12 m6  l4 xl3 ">
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
-                            <img class="activator " width="150px " height="150px " src="">
+                            <img class="activator " width="150px " height="150px " src="img_catalogo/juguetes.png">
                         </div>
                         <div class="card-content ">
                             <span class="card-title activator grey-text text-darken-4 ">Juguetes</span>
@@ -422,6 +422,9 @@
                         </div>
                         <div class="card-reveal ">
                             <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                    href="https://drive.google.com/file/d/1GxwNwet95dYEZXhxGxxXBR_gNhJ8ImYw/view?usp=sharing">
+                                    Línea inteligente Eagle</a></li><br>
                             <li><a class="flow-text"
                                     href="https://drive.google.com/file/d/1wfB5z2NL1RQ58fdS1yWDTrXt7y1mvu9g/view?usp=sharing">
                                     Catálogo Plata Negro</a></li><br>
