--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 m6  l4 xl3 " hidden>
+                <div class="col s12 m6  l4 xl3 ">
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
                             <img class="activator " width="150px " height="150px " src="img_catalogo/bestway.png">
