--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col s12 offset-m0 l4">
+                <div class="col s12 offset-m0 l4" hidden>
                     <div class="card borde small z-depth-5 hoverable" id="modo-nieve">
                         <div class="card-image waves-effect waves-block waves-light ">
                             <img class="activator " width="250px " height="200px " src="img_catalogo/navidad.png">
@@ -183,6 +183,24 @@
             </div>
             <!--row contiene todos los cards de la seccion productos-->
             <div class="row ">
+
+                <div class="col s12 m6  l4 xl3 ">
+                    <div class="card borde small z-depth-5 hoverable">
+                        <div class="card-image waves-effect waves-block waves-light ">
+                            <img class="activator " width="150px " height="150px " src="img_catalogo/zasc.png">
+                        </div>
+                        <div class="card-content ">
+                            <span class="card-title activator grey-text text-darken-4 ">ZASC</span>
+                            <p><a>Herramienta manual, productos de ferretería.</a></p>
+                        </div>
+                        <div class="card-reveal ">
+                            <span class="card-title grey-text text-darken-4 "></span>
+                            <li><a class="flow-text"
+                                    href="https://docs.google.com/spreadsheets/d/18doh_cE1ndEScOwgRn_YM1iwNuinBtiv/edit?usp=sharing&ouid=113384610071986709123&rtpof=true&sd=true">
+                                    Catálogo Zasc</TAble>.</a></li>
+                        </div>
+                    </div>
+                </div>
                 <div class="col s12 m6  l4 xl3 ">
                     <div class="card borde small z-depth-5 hoverable">
                         <div class="card-image waves-effect waves-block waves-light ">
