--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                                     href="https://drive.google.com/file/d/1bR46uo9PFuRybvl6R2mEFiPErrUfUjhE/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción de Verano</a></li><br>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1yvwbilWyKCte6M-JfIHorKZrPKlnG0D7/view?usp=sharing"><i
+                                    href="https://drive.google.com/file/d/1NPGfCxQw_2wVbcRR3b_R-ys9113hAgho/view?usp=drivesdk"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
                         </div>
                     </div>
