--- a/index.html
+++ b/index.html
@@ -121,11 +121,11 @@
                             <li><a class="flow-text" hidden
                                 href="https://drive.google.com/file/d/1YQDOyRnB27cFJBPwf0Qm0z7bxZo3WEMp/view?usp=sharing"><i
                                     class="material-icons left">cloud_done</i>Black friday Grifería</a></li><br>
-                            <li><a class="flow-text"
+                            <li><a class="flow-text" hidden
                                     href="https://drive.google.com/file/d/1bR46uo9PFuRybvl6R2mEFiPErrUfUjhE/view?usp=sharing"><i
                                         class="material-icons left">cloud_done</i>Promoción de Verano</a></li><br>
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1NPGfCxQw_2wVbcRR3b_R-ys9113hAgho/view?usp=drivesdk"><i
+                                    href="https://drive.google.com/file/d/1YGvKdwpc1fufka-ZBL-0tdI8fyeRjXwb/view?usp=drivesdk"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
                         </div>
                     </div>
