--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             <span class="card-title grey-text text-darken-4 ">Promociones</span>
                            
                             <li><a class="flow-text"
-                                    href="https://drive.google.com/file/d/1F5vgqQ5MzmRurAv3aTAXqoGab8FeC5Wk/view?usp=sharing"><i
+                                    href="https://drive.google.com/file/d/1y5-oKxnRSthYBB-dwckXXkiyL0XERrcW/view?usp=drivesdk"><i
                                         class="material-icons left">cloud_done</i>Promoción Mensual</a></li>
                         </div>
                     </div>
